WIP: angular frontend pt.9 Implement profile page, update & deletion
